add commands to code pallete. I can edit tiny javascript. YEAH!

--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -84,34 +84,34 @@
 												<ol class="pallet-code block connect-area">
 													<li class="basic-block">
 														<div class="block-body">
-															alert(<span class="exp-body item1"></span>);</span>
+															alert(<span class="exp-body item1"></span>);
 														</div>
 														<div class="code-body">
-															alert(<span class="exp-body item1"></span>);</span>
+															alert(<span class="exp-body item1"></span>);
 														</div>
 													</li>
 													<li class="basic-block">
 														<div class="block-body">
-															var <span class="exp-body item1">input</span> = prompt(<span class="exp-body item2"></span>);</span>
+															var <span class="exp-body item1">input</span> = prompt(<span class="exp-body item2"></span>);
 														</div>
 														<div class="code-body">
-															var <span class="exp-body item1">input</span> = prompt(<span class="exp-body item2"></span>);</span>
+															var <span class="exp-body item1">input</span> = prompt(<span class="exp-body item2"></span>);
 														</div>
 													</li>
 													<li class="basic-block">
 														<div class="block-body">
-															var <span class="exp-body item1">flag</span> = confirm(<span class="exp-body item2"></span>);</span>
+															var <span class="exp-body item1">flag</span> = confirm(<span class="exp-body item2"></span>);
 														</div>
 														<div class="code-body">
-															var <span class="exp-body item1">flag</span> = confirm(<span class="exp-body item2"></span>);</span>
+															var <span class="exp-body item1">flag</span> = confirm(<span class="exp-body item2"></span>);
 														</div>
 													</li>
 													<li class="comment-block">
 														<div class="block-body">
-															/** <span class="exp-body item1">comment</span></span> */</span>
+															/** <span class="exp-body item1">comment</span></span> */
 														</div>
 														<div class="code-body">
-															/** <span class="exp-body item1">comment</span></span> */</span>
+															/** <span class="exp-body item1">comment</span></span> */
 														</div>
 													</li>
 												</ol>
@@ -130,12 +130,78 @@
 										<div id="collapse12" class="panel-collapse collapse">
 											<div class="panel-body">
 												<ol class="pallet-code block connect-area">
-													<li class="if-block">IF ()
-														<span class="code-body">if ()</span></li>
-													<li class="if-block">ELSE IF ()
-														<span class="code-body">else if ()</span></li>
-													<li class="if-block">ELSE
-														<span class="code-body">else</span></li>
+													<li class="if-block">
+														<div class="block-body">
+															if(<span class="exp-body item1"></span>) {
+														</div>
+														<div class="code-body">
+															if(<span class="exp-body item1"></span>) {
+														</div>
+														<ol>
+															<li class="comment-block">
+																<div class="block-body">
+																	/** <span class="exp-body item1">comment</span></span> */
+																</div>
+																<div class="code-body">
+																	/** <span class="exp-body item1">comment</span></span> */
+																</div>
+															</li>
+														</ol>
+														<div class="block-body">
+															}
+														</div>
+														<div class="code-body">
+															}
+														</div>
+													</li>
+													<li class="if-block">
+														<div class="block-body">
+															else if(<span class="exp-body item1"></span>) {
+														</div>
+														<div class="code-body">
+															else if(<span class="exp-body item1"></span>) {
+														</div>
+														<ol>
+															<li class="comment-block">
+																<div class="block-body">
+																	/** <span class="exp-body item1">comment</span> */
+																</div>
+																<div class="code-body">
+																	/** <span class="exp-body item1">comment</span> */
+																</div>
+															</li>
+														</ol>
+														<div class="block-body">
+															}
+														</div>
+														<div class="code-body">
+															}
+														</div>
+													</li>
+													<li class="if-block">
+														<div class="block-body">
+															else {
+														</div>
+														<div class="code-body">
+															else {
+														</div>
+														<ol>
+															<li class="comment-block">
+																<div class="block-body">
+																	/** <span class="exp-body item1">comment</span> */
+																</div>
+																<div class="code-body">
+																	/** <span class="exp-body item1">comment</span> */
+																</div>
+															</li>
+														</ol>
+														<div class="block-body">
+															}
+														</div>
+														<div class="code-body">
+															}
+														</div>
+													</li>
 												</ol>
 											</div>
 										</div>
@@ -152,10 +218,54 @@
 										<div id="collapse13" class="panel-collapse collapse">
 											<div class="panel-body">
 												<ol class="pallet-code block connect-area">
-													<li class="loop-block">WHILE
-														<span class="code-body">while</span></li>
-													<li class="loop-block">FOR
-														<span class="code-body">for</span></li>
+													<li class="loop-block">
+														<div class="block-body">
+															while(<span class="exp-body item1"></span>) {
+														</div>
+														<div class="code-body">
+															while(<span class="exp-body item1"></span>) {
+														</div>
+														<ol>
+															<li class="comment-block">
+																<div class="block-body">
+																	/** <span class="exp-body item1">comment</span> */
+																</div>
+																<div class="code-body">
+																	/** <span class="exp-body item1">comment</span> */
+																</div>
+															</li>
+														</ol>
+														<div class="block-body">
+															}
+														</div>
+														<div class="code-body">
+															}
+														</div>
+													</li>
+													<li class="loop-block">
+														<div class="block-body">
+															for(<span class="exp-body item1"></span>) {
+														</div>
+														<div class="code-body">
+															for(<span class="exp-body item1"></span>) {
+														</div>
+														<ol>
+															<li class="comment-block">
+																<div class="block-body">
+																	/** <span class="exp-body item1">comment</span> */
+																</div>
+																<div class="code-body">
+																	/** <span class="exp-body item1">comment</span> */
+																</div>
+															</li>
+														</ol>
+														<div class="block-body">
+															}
+														</div>
+														<div class="code-body">
+															}
+														</div>
+													</li>
 												</ol>
 											</div>
 										</div>
@@ -172,12 +282,22 @@
 										<div id="collapse14" class="panel-collapse collapse">
 											<div class="panel-body">
 												<ol class="pallet-code block connect-area">
-													<li class="var-block item-block">ITEM_A
-														<span class="code-body">item_a</span></li>
-												</ol>
-												<ol class="pallet-code block connect-area">
-													<li class="var-block item-block">ITEM_B
-														<span class="code-body">item_b</span></li>
+													<li class="var-block">
+														<div class="block-body">
+															var <span class="exp-body item1">i = i + 1</span>;
+														</div>
+														<div class="code-body">
+															var <span class="exp-body item1">i = i + 1</span>;
+														</div>
+													</li>
+													<li class="var-block">
+														<div class="block-body">
+															<span class="exp-body item1">i = i + 1</span>;
+														</div>
+														<div class="code-body">
+															<span class="exp-body item1">i = i + 1</span>;
+														</div>
+													</li>
 												</ol>
 											</div>
 										</div>
@@ -194,146 +314,146 @@
 							<ol class="block connect-area serialize">
 								<li class="var-block">
 									<div class="block-body">
-										var <span class="exp-body item1">msg = "Hello:" + name + "\n"</span>;</span>
+										var <span class="exp-body item1">msg = "Hello:" + name + "\n"</span>;
 									</div>
 									<div class="code-body">
-										var <span class="exp-body item1">msg = "Hello:" + name + "\n"</span>;</span>
+										var <span class="exp-body item1">msg = "Hello:" + name + "\n"</span>;
 									</div>
 								</li>
 								<li class="var-block">
 									<div class="block-body">
-										var <span class="exp-body item1">i = 1</span>;</span>
+										var <span class="exp-body item1">i = 1</span>;
 									</div>
 									<div class="code-body">
-										var <span class="exp-body item1">i = 1</span>;</span>
+										var <span class="exp-body item1">i = 1</span>;
 									</div>
 								</li>
 								<li class="loop-block">
 									<div class="block-body">
-										while(<span class="exp-body item1">i <= 15</span>) {</span>
+										while(<span class="exp-body item1">i <= 15</span>) {
 									</div>
 									<div class="code-body">
-										while(<span class="exp-body item1">i <= 15</span>) {</span>
+										while(<span class="exp-body item1">i <= 15</span>) {
 									</div>
 									<ol>
 									<li class="if-block">
 										<div class="block-body">
-											if(<span class="exp-body item1">(i % 3 === 0) && (i % 5 === 0)</span>) {</span>
+											if(<span class="exp-body item1">(i % 3 === 0) && (i % 5 === 0)</span>) {
 										</div>
 										<div class="code-body">
-											if(<span class="exp-body item1">(i % 3 === 0) && (i % 5 === 0)</span>) {</span>
+											if(<span class="exp-body item1">(i % 3 === 0) && (i % 5 === 0)</span>) {
 										</div>
 											<ol>
 											<li class="var-block">
 												<div class="block-body">
-													<span class="exp-body item1">msg = msg + i + ": FizzBuzz\n"</span>;</span>
+													<span class="exp-body item1">msg = msg + i + ": FizzBuzz\n"</span>;
 												</div>
 												<div class="code-body">
-													<span class="exp-body item1">msg = msg + i + ": FizzBuzz\n"</span>;</span>
+													<span class="exp-body item1">msg = msg + i + ": FizzBuzz\n"</span>;
 												</div>
 											</li>
 											</ol>
 										<div class="block-body">
-											}</span>
+											}
 										</div>
 										<div class="code-body">
-											}</span>
+											}
 										</div>
 									</li>
 									<li class="if-block">
 										<div class="block-body">
-											else if(<span class="exp-body item1">(i % 3 === 0)</span>) {</span>
+											else if(<span class="exp-body item1">(i % 3 === 0)</span>) {
 										</div>
 										<div class="code-body">
-											else if(<span class="exp-body item1">(i % 3 === 0)</span>) {</span>
+											else if(<span class="exp-body item1">(i % 3 === 0)</span>) {
 										</div>
 											<ol>
 											<li class="var-block">
 												<div class="block-body">
-													<span class="exp-body item1">msg = msg + i + ": Fizz\n"</span>;</span>
+													<span class="exp-body item1">msg = msg + i + ": Fizz\n"</span>;
 												</div>
 												<div class="code-body">
-													<span class="exp-body item1">msg = msg + i + ": Fizz\n"</span>;</span>
+													<span class="exp-body item1">msg = msg + i + ": Fizz\n"</span>;
 												</div>
 											</li>
 											</ol>
 										<div class="block-body">
-											}</span>
+											}
 										</div>
 										<div class="code-body">
-											}</span>
+											}
 										</div>
 									</li>
 									<li class="if-block">
 										<div class="block-body">
-											else if(<span class="exp-body item1">(i % 5 === 0)</span>) {</span>
+											else if(<span class="exp-body item1">(i % 5 === 0)</span>) {
 										</div>
 										<div class="code-body">
-											else if(<span class="exp-body item1">(i % 5 === 0)</span>) {</span>
+											else if(<span class="exp-body item1">(i % 5 === 0)</span>) {
 										</div>
 											<ol>
 											<li class="var-block">
 												<div class="block-body">
-													<span class="exp-body item1">msg = msg + i + ": Buzz\n"</span>;</span>
+													<span class="exp-body item1">msg = msg + i + ": Buzz\n"</span>;
 												</div>
 												<div class="code-body">
-													<span class="exp-body item1">msg = msg + i + ": Buzz\n"</span>;</span>
+													<span class="exp-body item1">msg = msg + i + ": Buzz\n"</span>;
 												</div>
 											</li>
 											</ol>
 										<div class="block-body">
-											}</span>
+											}
 										</div>
 										<div class="code-body">
-											}</span>
+											}
 										</div>
 									</li>
 									<li class="if-block">
 										<div class="block-body">
-											else {</span>
+											else {
 										</div>
 										<div class="code-body">
-											else {</span>
+											else {
 										</div>
 											<ol>
 											<li class="var-block">
 												<div class="block-body">
-													<span class="exp-body item1">msg = msg + i + "\n"</span>;</span>
+													<span class="exp-body item1">msg = msg + i + "\n"</span>;
 												</div>
 												<div class="code-body">
-													<span class="exp-body item1">msg = msg + i + "\n"</span>;</span>
+													<span class="exp-body item1">msg = msg + i + "\n"</span>;
 												</div>
 											</li>
 											</ol>
 										<div class="block-body">
-											}</span>
+											}
 										</div>
 										<div class="code-body">
-											}</span>
+											}
 										</div>
 									</li>
 									<li class="var-block">
 										<div class="block-body">
-											var <span class="exp-body item1">i = i + 1</span>;</span>
+											var <span class="exp-body item1">i = i + 1</span>;
 										</div>
 										<div class="code-body">
-											var <span class="exp-body item1">i = i + 1</span>;</span>
+											var <span class="exp-body item1">i = i + 1</span>;
 										</div>
 									</li>
 									</ol>
 									<div class="block-body">
-										}</span>
+										}
 									</div>
 									<div class="code-body">
-										}</span>
+										}
 									</div>
 								</li>
 								<li class="basic-block">
 									<div class="block-body">
-										alert(<span class="exp-body item1">msg</span>);</span>
+										alert(<span class="exp-body item1">msg</span>);
 									</div>
 									<div class="code-body">
-										alert(<span class="exp-body item1">msg</span>);</span>
+										alert(<span class="exp-body item1">msg</span>);
 									</div>
 								</li>
 							</ol>
