change small mistake.

--- a/fizz-buzz.html
+++ b/fizz-buzz.html
@@ -13,7 +13,7 @@
 		<link href="lib/css/bootstrap.min.css" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
-		<link href="css/non-responsive.css" rel="stylesheet">
+		<link href="lib/css/non-responsive.css" rel="stylesheet">
 		<link href="lib/css/dashboard.css" rel="stylesheet">
 		<link href="lib/css/flat-ui.min.css" rel="stylesheet">
 		<link href="lib/css/soramame.block.css" rel="stylesheet">
