--- a/example_game.html
+++ b/example_game.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 		<meta name="description" content="This is very small block-type code editor ">
 		<meta name="author" content="Yutaka Kachi">
 		<link rel="icon" href="lib/img/favicon.ico">
@@ -13,6 +13,7 @@
 		<link href="lib/css/bootstrap.min.css" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
+		<link href="lib/css/non-responsive.css" rel="stylesheet">
 		<link href="lib/css/dashboard.css" rel="stylesheet">
 		<link href="lib/css/flat-ui.min.css" rel="stylesheet">
 		<link href="lib/css/soramame.block.css" rel="stylesheet">
@@ -46,7 +47,7 @@
 						<li onclick="SORAMAME_BLOCK.setSerializeBlock()">
 							<a href="#menu2" data-toggle="tab">Code</a>
 						</li>
-<!-- 						<li>
+						<!-- <li>
 							<a href="javascript:void(0)" onclick="SORAMAME_BLOCK.execCodeBlock(); return false;">
 								<i class="glyphicon glyphicon-play"></i>Run
 							</a>
@@ -63,7 +64,7 @@
 					<!-- tab item #1 -->
 					<div class="tab-pane fade in active" id="menu1">
 						<!-- ---------- start sidebar ---------- -->
-						<div class="col-sm-5 col-md-5 sidebar">
+						<div class="col-xs-5 sidebar">
 							<div class="sidebar-nav" role="complementary">
 							
 								<!-- ---------- start game area ---------- -->
@@ -86,16 +87,46 @@
 										<div id="collapse11" class="panel-collapse collapse in">
 											<div class="panel-body">
 												<ol class="pallet-code block connect-area">
-													<li class="var-block">Speed = 1;
-														<span class="code-body">SORAMAME_BLOCK.app.speed = 1;</span></li>
-													<li class="var-block">Speed = 2;
-														<span class="code-body">SORAMAME_BLOCK.app.speed = 2;</span></li>
-													<li class="var-block">Speed = 3;
-														<span class="code-body">SORAMAME_BLOCK.app.speed = 3;</span></li>
-													<li class="var-block">Speed = 4;
-														<span class="code-body">SORAMAME_BLOCK.app.speed = 4;</span></li>
-													<li class="comment-block">/* comment */
-														<span class="code-body">/* comment */</span></li>
+													<li class="var-block">
+														<div class="block-body">
+															Speed = 1;
+														</div>
+														<div class="code-body">
+															SORAMAME_BLOCK.app.speed = 1;
+														</div>
+													</li>
+													<li class="var-block">
+														<div class="block-body">
+															Speed = 2;
+														</div>
+														<div class="code-body">
+															SORAMAME_BLOCK.app.speed = 2;
+														</div>
+													</li>
+													<li class="var-block">
+														<div class="block-body">
+															Speed = 3;
+														</div>
+														<div class="code-body">
+															SORAMAME_BLOCK.app.speed = 3;
+														</div>
+													</li>
+													<li class="var-block">
+														<div class="block-body">
+															Speed = 4;
+														</div>
+														<div class="code-body">
+															SORAMAME_BLOCK.app.speed = 4;
+														</div>
+													</li>
+													<li class="comment-block">
+														<div class="block-body">
+															/** <span class="exp-body item1">comment</span> */
+														</div>
+														<div class="code-body">
+															/** <span class="exp-body item1">comment</span> */
+														</div>
+													</li>
 												</ol>
 											</div>
 										</div>
@@ -112,12 +143,30 @@
 										<div id="collapse13" class="panel-collapse collapse">
 											<div class="panel-body">
 												<ol class="pallet-code block connect-area">
-													<li class="basic-block">Background = 'city';
-														<span class="code-body">SORAMAME_BLOCK.app.background = 'city';</span></li>
-													<li class="basic-block">Background = 'jungle';
-														<span class="code-body">SORAMAME_BLOCK.app.background = 'jungle';</span></li>
-													<li class="basic-block">Background = 'planet';
-														<span class="code-body">SORAMAME_BLOCK.app.background = 'planet';</span></li>
+													<li class="var-block">
+														<div class="block-body">
+															Background = 'city';
+														</div>
+														<div class="code-body">
+															SORAMAME_BLOCK.app.background = 'city';
+														</div>
+													</li>
+													<li class="var-block">
+														<div class="block-body">
+															Background = 'jungle';
+														</div>
+														<div class="code-body">
+															SORAMAME_BLOCK.app.background = 'jungle';
+														</div>
+													</li>
+													<li class="var-block">
+														<div class="block-body">
+															Background = 'planet';
+														</div>
+														<div class="code-body">
+															SORAMAME_BLOCK.app.background = 'planet';
+														</div>
+													</li>
 												</ol>
 											</div>
 										</div>
@@ -131,19 +180,37 @@
 						<!-- ---------- end of side-bar ---------- -->
 
 						<!-- ---------- Main Edit Area ---------- -->
-						<div class="col-sm-6 col-sm-offset-5 col-md-6 col-md-offset-5 main">
+						<div class="col-xs-6 col-xs-offset-5 main">
 							<ol class="block connect-area serialize">
-								<li class="comment-block">/* Set Speed */
-									<span class="code-body">/* Set Speed */</span></li>
-								<li class="var-block">Speed = 1;
-									<span class="code-body">SORAMAME_BLOCK.app.speed = 1;</span></li>
-								<li class="comment-block">/* Set Background */
-									<span class="code-body">/* Set Background */</span></li>
+								<li class="comment-block">
+									<div class="block-body">
+										/** Set Speed */
+									</div>
+									<div class="code-body">
+										/** Set Speed */
+									</div>
+								</li>
+								<li class="var-block">
+									<div class="block-body">
+										Speed = 1;
+									</div>
+									<div class="code-body">
+										SORAMAME_BLOCK.app.speed = 1;
+									</div>
+								</li>
+								<li class="comment-block">
+									<div class="block-body">
+										/** Set Background */
+									</div>
+									<div class="code-body">
+										/** Set Background */
+									</div>
+								</li>
 							</ol>
 						</div>
 						<!-- end of Main Edit Area-->
 						<!-- ---------- trash area ---------- -->
-						<div class="col-sm-1 col-md-1">
+						<div class="col-xs-1">
 							<div class="sidebar-nav affix" role="complementary" data-toggle="tooltip" data-placement="top" title="double-click:clear">
 								<p></p>
 								<a class="trash" href="#" ondblclick="SORAMAME_BLOCK.clearTrash()"></a>
@@ -156,8 +223,8 @@
 
 					<!-- tab item #2 -->
 					<div class="tab-pane fade" id="menu2">
-						<div class="col-sm-2 col-md-2"></div>
-						<div class="col-sm-10 col-md-10">
+						<div class="col-xs-2"></div>
+						<div class="col-xs-10">
 							<pre>
 								<code class="js"></code>
 							</pre>
@@ -168,6 +235,25 @@
 				<!-- end of tab body-->
 			</div>
 			<!-- end of row -->
+			<!-- Express Editor by Bootstrap3 Modals -->
+			<div id="expModalDialog" class="modal fade">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h4 class="modal-title">Express Editor</h4>
+						</div>
+						<div class="modal-body">
+							<input type="text" id="expModalText" value="Input express">
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-primary" onclick="SORAMAME_BLOCK.clodeExpDialog()">OK</button>
+							<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- /.modal -->
 		</div>
 		<!-- end of container -->
 
