--- a/example_game.html
+++ b/example_game.html
@@ -68,7 +68,7 @@
 							<div class="sidebar-nav" role="complementary">
 							
 								<!-- ---------- start game area ---------- -->
-								<div class="container">
+								<div class="panel-default">
 									<div id="game">
 									<!-- This has to be inside the game CANVAS by Phaser-->
 									</div>
