Add development_guide and refactaring.

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 							<input type="text" id="expModalText" value="Input express">
 						</div>
 						<div class="modal-footer">
-							<button type="button" class="btn btn-primary" onclick="SORAMAME_BLOCK.clodeExpDialog()">OK</button>
+							<button type="button" class="btn btn-primary" id="btn_ok_expModalDialog">OK</button>
 							<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 						</div>
 					</div>
