--- a/example_turtle.html
+++ b/example_turtle.html
@@ -414,15 +414,15 @@
 															<span class="exp-body item1">funcName</span>(<span class="exp-body item2"></span>);
 														</div>
 														<div class="code-body">
-															TURTLE.commnd.<span class="exp-body item1">funcName</span>(<span class="exp-body item2"></span>);
+															<span class="exp-body item1">funcName</span>(<span class="exp-body item2"></span>);
 														</div>
 													</li>
 													<li class="func-block">
 														<div class="block-body">
-															<span class="exp-body item1">funcName</span> = function (<span class="exp-body item2"></span>) {
+															function <span class="exp-body item1">funcName</span>(<span class="exp-body item2"></span>) {
 														</div>
 														<div class="code-body">
-															TURTLE.commnd.<span class="exp-body item1">funcName</span> = function (<span class="exp-body item2">arg</span>) {
+															function <span class="exp-body item1">funcName</span>(<span class="exp-body item2"></span>) {
 														</div>
 														<ol>
 															<li class="comment-block">
@@ -495,6 +495,14 @@
 										TURTLE.penColor = TURTLE.color.<span class="exp-body item1">blue</span>;
 									</div>
 								</li>
+								<li class="func-block">
+									<div class="block-body">
+										<span class="exp-body item1">hexagon</span>(<span class="exp-body item2"></span>);
+									</div>
+									<div class="code-body">
+										<span class="exp-body item1">hexagon</span>(<span class="exp-body item2"></span>);
+									</div>
+								</li>
 								<li class="comment-block">
 									<div class="block-body">
 										/** Set Drawing */
@@ -503,60 +511,76 @@
 										/** Set Drawing */
 									</div>
 								</li>
-								<li class="var-block">
+								<li class="func-block">
 									<div class="block-body">
-										var <span class="exp-body item1">step = 20</span>;
+										function <span class="exp-body item1">hexagon</span>(<span class="exp-body item2"></span>) {
 									</div>
 									<div class="code-body">
-										var <span class="exp-body item1">step = 20</span>;
-									</div>
-								</li>
-								<li class="var-block">
-									<div class="block-body">
-										var <span class="exp-body item1">length = 5</span>;
-									</div>
-									<div class="code-body">
-										var <span class="exp-body item1">length = 5</span>;
-									</div>
-								</li>
-								<li class="var-block">
-									<div class="block-body">
-										var <span class="exp-body item1">i</span>;
-									</div>
-									<div class="code-body">
-										var <span class="exp-body item1">i</span>;
-									</div>
-								</li>
-								<li class="loop-block">
-									<div class="block-body">
-										for(<span class="exp-body item1">i = 1; i <= step; i++</span>) {
-									</div>
-									<div class="code-body">
-										for(<span class="exp-body item1">i = 1; i <= step; i++</span>) {
+										function <span class="exp-body item1">hexagon</span>(<span class="exp-body item2"></span>) {
 									</div>
 									<ol>
-										<li class="turtle-block">
+										<li class="var-block">
 											<div class="block-body">
-												forward(<span class="exp-body item1">length</span>);
+												var <span class="exp-body item1">step = 20</span>;
 											</div>
 											<div class="code-body">
-												TURTLE.forward(<span class="exp-body item1">length</span>);
+												var <span class="exp-body item1">step = 20</span>;
 											</div>
 										</li>
 										<li class="var-block">
 											<div class="block-body">
-												length = <span class="exp-body item1">length + 3</span>;
+												var <span class="exp-body item1">length = 5</span>;
 											</div>
 											<div class="code-body">
-												length = <span class="exp-body item1">length + 3</span>;
+												var <span class="exp-body item1">length = 5</span>;
 											</div>
 										</li>
-										<li class="turtle-block">
+										<li class="var-block">
 											<div class="block-body">
-												left(<span class="exp-body item1">60</span>);
+												var <span class="exp-body item1">i</span>;
 											</div>
 											<div class="code-body">
-												TURTLE.left(<span class="exp-body item1">60</span>);
+												var <span class="exp-body item1">i</span>;
+											</div>
+										</li>
+										<li class="loop-block">
+											<div class="block-body">
+												for(<span class="exp-body item1">i = 1; i <= step; i++</span>) {
+											</div>
+											<div class="code-body">
+												for(<span class="exp-body item1">i = 1; i <= step; i++</span>) {
+											</div>
+											<ol>
+												<li class="turtle-block">
+													<div class="block-body">
+														forward(<span class="exp-body item1">length</span>);
+													</div>
+													<div class="code-body">
+														TURTLE.forward(<span class="exp-body item1">length</span>);
+													</div>
+												</li>
+												<li class="var-block">
+													<div class="block-body">
+														length = <span class="exp-body item1">length + 3</span>;
+													</div>
+													<div class="code-body">
+														length = <span class="exp-body item1">length + 3</span>;
+													</div>
+												</li>
+												<li class="turtle-block">
+													<div class="block-body">
+														left(<span class="exp-body item1">60</span>);
+													</div>
+													<div class="code-body">
+														TURTLE.left(<span class="exp-body item1">60</span>);
+													</div>
+												</li>
+											</ol>
+											<div class="block-body">
+												}
+											</div>
+											<div class="code-body">
+												}
 											</div>
 										</li>
 									</ol>
@@ -564,7 +588,7 @@
 										}
 									</div>
 									<div class="code-body">
-										}
+										};
 									</div>
 								</li>
 							</ol>
