change turtle example for function command.

--- a/example_turtle.html
+++ b/example_turtle.html
@@ -206,7 +206,7 @@
 															--------
 														</div>
 														<div class="code-body">
-															
+															--------
 														</div>
 													</li>
 												</ol>
@@ -457,10 +457,10 @@
 							<ol class="block connect-area serialize">
 								<li class="comment-block">
 									<div class="block-body">
-										/** Set Start Position */
+										/** Set Program */
 									</div>
 									<div class="code-body">
-										/** Set Start Position */
+										/** Set Program */
 									</div>
 								</li>
 								<li class="turtle-block">
@@ -497,36 +497,36 @@
 								</li>
 								<li class="func-block">
 									<div class="block-body">
-										<span class="exp-body item1">hexagon</span>(<span class="exp-body item2"></span>);
+										<span class="exp-body item1">hexagon</span>(<span class="exp-body item2">20</span>);
 									</div>
 									<div class="code-body">
-										<span class="exp-body item1">hexagon</span>(<span class="exp-body item2"></span>);
+										<span class="exp-body item1">hexagon</span>(<span class="exp-body item2">20</span>);
+									</div>
+								</li>
+								<li class="blank-block">
+									<div class="block-body">
+										--------
+									</div>
+									<div class="code-body">
+										--------
 									</div>
 								</li>
 								<li class="comment-block">
 									<div class="block-body">
-										/** Set Drawing */
+										/** Set Command */
 									</div>
 									<div class="code-body">
-										/** Set Drawing */
+										/** Set Command */
 									</div>
 								</li>
 								<li class="func-block">
 									<div class="block-body">
-										function <span class="exp-body item1">hexagon</span>(<span class="exp-body item2"></span>) {
+										function <span class="exp-body item1">hexagon</span>(<span class="exp-body item2">step</span>) {
 									</div>
 									<div class="code-body">
-										function <span class="exp-body item1">hexagon</span>(<span class="exp-body item2"></span>) {
+										function <span class="exp-body item1">hexagon</span>(<span class="exp-body item2">step</span>) {
 									</div>
 									<ol>
-										<li class="var-block">
-											<div class="block-body">
-												var <span class="exp-body item1">step = 20</span>;
-											</div>
-											<div class="code-body">
-												var <span class="exp-body item1">step = 20</span>;
-											</div>
-										</li>
 										<li class="var-block">
 											<div class="block-body">
 												var <span class="exp-body item1">length = 5</span>;
