add function command on tool-palette

--- a/example_turtle.html
+++ b/example_turtle.html
@@ -417,6 +417,22 @@
 															<span class="exp-body item1">funcName</span>(<span class="exp-body item2"></span>);
 														</div>
 													</li>
+													<li class="var-block">
+														<div class="block-body">
+															<span class="exp-body item1">data</span> = <span class="exp-body item2">funcName</span>(<span class="exp-body item3"></span>);
+														</div>
+														<div class="code-body">
+															<span class="exp-body item1">data</span> = <span class="exp-body item2">funcName</span>(<span class="exp-body item3"></span>);
+														</div>
+													</li>
+													<li class="var-block">
+														<div class="block-body">
+															var <span class="exp-body item1">data</span> = <span class="exp-body item2">funcName</span>(<span class="exp-body item3"></span>);
+														</div>
+														<div class="code-body">
+															var <span class="exp-body item1">data</span> = <span class="exp-body item2">funcName</span>(<span class="exp-body item3"></span>);
+														</div>
+													</li>
 													<li class="func-block">
 														<div class="block-body">
 															function <span class="exp-body item1">funcName</span>(<span class="exp-body item2"></span>) {
@@ -431,6 +447,14 @@
 																</div>
 																<div class="code-body">
 																	/** <span class="exp-body item1">comment</span> */
+																</div>
+															</li>
+															<li class="basic-block">
+																<div class="block-body">
+																	return <span class="exp-body item1">value</span>;
+																</div>
+																<div class="code-body">
+																	return <span class="exp-body item1">value</span>;
 																</div>
 															</li>
 														</ol>
