add command for clear CANVAS.

--- a/example_turtle.html
+++ b/example_turtle.html
@@ -489,6 +489,14 @@
 								</li>
 								<li class="turtle-block">
 									<div class="block-body">
+										clear();
+									</div>
+									<div class="code-body">
+										TURTLE.clear();
+									</div>
+								</li>
+								<li class="turtle-block">
+									<div class="block-body">
 										x = <span class="exp-body item1">150</span>;
 									</div>
 									<div class="code-body">
