add anngle command.

--- a/example_turtle.html
+++ b/example_turtle.html
@@ -112,6 +112,14 @@
 													</li>
 													<li class="turtle-block">
 														<div class="block-body">
+															angle = <span class="exp-body item1">90</span> // 0-360;
+														</div>
+														<div class="code-body">
+															TURTLE.setAngle(<span class="exp-body item1">90</span>);
+														</div>
+													</li>
+													<li class="turtle-block">
+														<div class="block-body">
 															forward(<span class="exp-body item1">10</span>);
 														</div>
 														<div class="code-body">
@@ -530,6 +538,14 @@
 									</div>
 									<div class="code-body">
 										TURTLE.y = <span class="exp-body item1">150</span>;
+									</div>
+								</li>
+								<li class="turtle-block">
+									<div class="block-body">
+										angle = <span class="exp-body item1">180</span> // 0-360;
+									</div>
+									<div class="code-body">
+										TURTLE.setAngle(<span class="exp-body item1">180</span>);
 									</div>
 								</li>
 								<li class="turtle-block">
