add logPenStatus for console

--- a/example_turtle.html
+++ b/example_turtle.html
@@ -182,6 +182,14 @@
 															TURTLE.mark();
 														</div>
 													</li>
+													<li class="turtle-block">
+														<div class="block-body">
+															logPenStatus();
+														</div>
+														<div class="code-body">
+															TURTLE.logPenStatus();
+														</div>
+													</li>
 												</ol>
 											</div>
 										</div>
