--- a/dev/html_parts/body_pallette_turtle.html
+++ b/dev/html_parts/body_pallette_turtle.html
@@ -1,69 +1,4 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-		<meta name="description" content="This is very small block-type code editor ">
-		<meta name="author" content="Yutaka Kachi">
-		<link rel="icon" href="lib/img/favicon.ico">﻿
-		<title>Example - SoraMame Block</title>﻿
-		<!-- Bootstrap core CSS -->
-		<link href="lib/css/bootstrap.min.css" rel="stylesheet">
-
-		<!-- Custom styles for this template -->
-		<link href="lib/css/non-responsive.css" rel="stylesheet">
-		<link href="lib/css/dashboard.css" rel="stylesheet">
-		<link href="lib/css/flat-ui.min.css" rel="stylesheet">
-		<link href="lib/css/soramame.block.css" rel="stylesheet">
-		<link href="lib/css/highlight_default.css" rel="stylesheet">
-
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->﻿
-		<style>
-			canvas {border: 1px dotted #564b47;}
-			.turtle-block {background-color: #e67e22; color: White;}
-		</style>﻿	
-	</head>
-	<body>
-		<!-- ---------- Start Static navbar ---------- -->
-		<nav class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="https://github.com/ycatch/SoraMame.Block">Turtle Block</a>
-				</div>
-				<div id="navbar" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav">
-						<li class="active">
-							<a href="#menu1" data-toggle="tab">Block</a>
-						</li>
-						<li onclick="SORAMAME_BLOCK.setSerializeBlock()">
-							<a href="#menu2" data-toggle="tab">Code</a>
-						</li>
-						<li>
-							<a href="javascript:void(0)" onclick="SORAMAME_BLOCK.execCodeBlock(); return false;">
-								<i class="glyphicon glyphicon-play"></i>Run
-							</a>
-						</li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a href="#helpModalDialog" data-toggle="modal">Help</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-		<!-- End Static navbar -->﻿
+﻿
 		<div class="container-fluid">
 			<div class="row">
 				<!-- tab body -->
@@ -509,269 +444,4 @@
 								<!-- panel-group -->
 							</div>
 						</div>
-						<!-- ---------- end of side-bar ---------- -->﻿
-						<!-- ---------- Main Edit Area ---------- -->
-						<div class="col-xs-6 col-xs-offset-5 main">
-							<ol class="block connect-area serialize">
-								<li class="comment-block">
-									<div class="block-body">
-										/** Set Program */
-									</div>
-									<div class="code-body">
-										/** Set Program */
-									</div>
-								</li>
-								<li class="turtle-block">
-									<div class="block-body">
-										clear();
-									</div>
-									<div class="code-body">
-										TURTLE.clear();
-									</div>
-								</li>
-								<li class="turtle-block">
-									<div class="block-body">
-										x = <span class="exp-body item1">150</span>;
-									</div>
-									<div class="code-body">
-										TURTLE.x = <span class="exp-body item1">150</span>;
-									</div>
-								</li>
-								<li class="turtle-block">
-									<div class="block-body">
-										y = <span class="exp-body item1">150</span>;
-									</div>
-									<div class="code-body">
-										TURTLE.y = <span class="exp-body item1">150</span>;
-									</div>
-								</li>
-								<li class="turtle-block">
-									<div class="block-body">
-										angle = <span class="exp-body item1">180</span> // 0-360;
-									</div>
-									<div class="code-body">
-										TURTLE.setAngle(<span class="exp-body item1">180</span>);
-									</div>
-								</li>
-								<li class="turtle-block">
-									<div class="block-body">
-										penDown = <span class="exp-body item1">true</span>;
-									</div>
-									<div class="code-body">
-										TURTLE.penDown = <span class="exp-body item1">true</span>;
-									</div>
-								</li>
-								<li class="turtle-block">
-									<div class="block-body">
-										penColor = <span class="exp-body item1">blue</span>;
-									</div>
-									<div class="code-body">
-										TURTLE.penColor = TURTLE.color.<span class="exp-body item1">blue</span>;
-									</div>
-								</li>
-								<li class="func-block">
-									<div class="block-body">
-										<span class="exp-body item1">hexagon</span>(<span class="exp-body item2">20</span>);
-									</div>
-									<div class="code-body">
-										<span class="exp-body item1">hexagon</span>(<span class="exp-body item2">20</span>);
-									</div>
-								</li>
-								<li class="turtle-block">
-									<div class="block-body">
-										mark();
-									</div>
-									<div class="code-body">
-										TURTLE.mark();
-									</div>
-								</li>
-								<li class="blank-block">
-									<div class="block-body">
-										--------
-									</div>
-									<div class="code-body">
-										--------
-									</div>
-								</li>
-								<li class="comment-block">
-									<div class="block-body">
-										/** Set Command */
-									</div>
-									<div class="code-body">
-										/** Set Command */
-									</div>
-								</li>
-								<li class="func-block">
-									<div class="block-body">
-										function <span class="exp-body item1">hexagon</span>(<span class="exp-body item2">step</span>) {
-									</div>
-									<div class="code-body">
-										function <span class="exp-body item1">hexagon</span>(<span class="exp-body item2">step</span>) {
-									</div>
-									<ol>
-										<li class="var-block">
-											<div class="block-body">
-												var <span class="exp-body item1">length = 5</span>;
-											</div>
-											<div class="code-body">
-												var <span class="exp-body item1">length = 5</span>;
-											</div>
-										</li>
-										<li class="var-block">
-											<div class="block-body">
-												var <span class="exp-body item1">i</span>;
-											</div>
-											<div class="code-body">
-												var <span class="exp-body item1">i</span>;
-											</div>
-										</li>
-										<li class="loop-block">
-											<div class="block-body">
-												for(<span class="exp-body item1">i = 1; i <= step; i++</span>) {
-											</div>
-											<div class="code-body">
-												for(<span class="exp-body item1">i = 1; i <= step; i++</span>) {
-											</div>
-											<ol>
-												<li class="turtle-block">
-													<div class="block-body">
-														forward(<span class="exp-body item1">length</span>);
-													</div>
-													<div class="code-body">
-														TURTLE.forward(<span class="exp-body item1">length</span>);
-													</div>
-												</li>
-												<li class="var-block">
-													<div class="block-body">
-														length = <span class="exp-body item1">length + 3</span>;
-													</div>
-													<div class="code-body">
-														length = <span class="exp-body item1">length + 3</span>;
-													</div>
-												</li>
-												<li class="turtle-block">
-													<div class="block-body">
-														left(<span class="exp-body item1">60</span>);
-													</div>
-													<div class="code-body">
-														TURTLE.left(<span class="exp-body item1">60</span>);
-													</div>
-												</li>
-											</ol>
-											<div class="block-body">
-												}
-											</div>
-											<div class="code-body">
-												}
-											</div>
-										</li>
-									</ol>
-									<div class="block-body">
-										}
-									</div>
-									<div class="code-body">
-										};
-									</div>
-								</li>
-							</ol>
-						</div>
-						<!-- end of Main Edit Area-->
-﻿						<!-- trash area-->
-						<div class="col-xs-1">
-							<div class="sidebar-nav affix" role="complementary" data-toggle="tooltip" data-placement="top" title="double-click:clear">
-								<p></p>
-								<a class="trash" href="#" ondblclick="SORAMAME_BLOCK.clearTrash()"></a>
-								<ol id="trash-can" class="trash-code block connect-area"></ol>
-							</div>
-						</div>
-						<!-- end of trash area-->
-					</div>
-					<!-- end of tab item #1 -->
-﻿
-					<!-- tab item #2 -->
-					<div class="tab-pane fade" id="menu2">
-						<div class="col-xs-2"></div>
-						<div class="col-xs-8">
-							<pre>
-								<code class="js"></code>
-							</pre>
-						</div>
-						<div class="col-xs-2"></div>
-					</div>
-					<!-- end of tab item #2 -->
-					
-				</div>
-				<!-- end of tab body-->
-			</div>
-			<!-- end of row -->
-﻿
-			<!-- Express Editor by Bootstrap3 Modals -->
-			<div id="expModalDialog" class="modal fade">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h4 class="modal-title">Express Editor</h4>
-						</div>
-						<div class="modal-body">
-							<input type="text" id="expModalText" value="Input express">
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-primary" id="btn_ok_expModalDialog">OK</button>
-							<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- /.modal -->﻿
-			<!-- Help dialog by Bootstrap3 Modals -->
-			<div id="helpModalDialog" class="modal fade">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h4 class="modal-title">Help - SoraMame.Block</h4>
-						</div>
-						<div class="modal-body">
-							<p>SoraMame.Block is block-type code editor for tiny script.</p>
-							<h5>How to use</h5>
-							<p>Block Tab</p>
-								<ul>
-									<li>Move Block: Drag and Drop block.</li>
-									<li>Edit Expression: Click expression </li>
-									<li>Clear Trash-Can: Double-Click trash</li>
-								</ul>
-							<p>Code Tab: View code.</p>
-							<p>Run Tab: Execute code.</p>
-							<h5>Reference</h5>
-							<ul>
-								<li><a href="https://github.com/ycatch/SoraMame.Block" target="_blank">Github</a></li>
-								<li><a href="http://www.catch.jp/wiki/index.php?SoraMame.Block" target="_blank">Japanese Documents - 日本語ドキュメント</a></li>
-							</ul>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- /.modal -->
- 
-		</div>
-		<!-- end of container -->﻿
-		<!-- turtle JavaScript ================================================== -->
-		<!-- Load turtle library -->
-		<script src="turtle/js/turtle.js"></script>﻿
-		<!-- Bootstrap core JavaScript ================================================== -->
-		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="lib/js/vendor/jquery.min.js"></script>
-		<script src="lib/js/bootstrap.min.js"></script>
-		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-		<script src="lib/js/ie10-viewport-bug-workaround.js"></script>
-		<!-- SoraMame Block core JavaScript ================================================== -->
-		<script type="text/javascript" src="lib/js/jquery-sortable.js"></script>
-		<script type="text/javascript" src="lib/js/soramame.block.js"></script>
-		<script type="text/javascript" src="lib/js/beautify.js"></script>
- 		<script type="text/javascript" src="lib/js/highlight.pack.js"></script>	
-	</body>
-</html>
+						<!-- ---------- end of side-bar ---------- -->
