--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 		<meta name="description" content="This is very small block-type code editor ">
 		<meta name="author" content="Yutaka Kachi">
-		<link rel="icon" href="lib/img/favicon.ico">
-		<title>SoraMame Block Editor for Tiny Script</title>
-
+		<link rel="icon" href="lib/img/favicon.ico">﻿
+		<title>SoraMame Block Editor for Tiny Script</title>﻿
 		<!-- Bootstrap core CSS -->
 		<link href="lib/css/bootstrap.min.css" rel="stylesheet">
 
@@ -23,8 +22,7 @@
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
-
+		<![endif]-->﻿
 	</head>
 	<body>
 		<!-- Start Static navbar -->
@@ -60,15 +58,14 @@
 					</ul>
 				</div>
 			</div>
-		</nav> <!-- End Static navbar -->
-		<div class="container-fluid">
+		</nav> <!-- End Static navbar -->﻿		<div class="container-fluid">
 			<div class="row">
 				<!-- tab body -->
 				<div class="tab-content">
 					<!-- tab item #1 -->
 					<div class="tab-pane fade in active" id="menu1">
 						<!-- start sidebar -->
-						<div class="col-xs-3 sidebar">
+						<div class="col-xs-5 sidebar">
 							<div class="sidebar-nav" role="complementary">
 								<div class="panel-group" id="accordion">
 									<!-- start panel -->
@@ -308,9 +305,9 @@
 							</div>
 						</div>
 						<!-- end of side-bar -->
-
+﻿
 						<!-- Main Edit Area -->
-						<div class="col-xs-7 col-xs-offset-3 main">
+						<div class="col-xs-6 col-xs-offset-5 main">
 							<ol class="block connect-area serialize">
 								<li class="var-block">
 									<div class="block-body">
@@ -459,8 +456,8 @@
 							</ol>
 						</div>
 						<!-- end of Main Edit Area-->
-						<!-- trash area-->
-						<div class="col-xs-2">
+﻿						<!-- trash area-->
+						<div class="col-xs-1">
 							<div class="sidebar-nav affix" role="complementary" data-toggle="tooltip" data-placement="top" title="double-click:clear">
 								<p></p>
 								<a class="trash" href="#" ondblclick="SORAMAME_BLOCK.clearTrash()"></a>
@@ -470,7 +467,7 @@
 						<!-- end of trash area-->
 					</div>
 					<!-- end of tab item #1 -->
-
+﻿
 					<!-- tab item #2 -->
 					<div class="tab-pane fade" id="menu2">
 						<div class="col-xs-2"></div>
@@ -487,7 +484,7 @@
 				<!-- end of tab body-->
 			</div>
 			<!-- end of row -->
-
+﻿
 			<!-- Express Editor by Bootstrap3 Modals -->
 			<div id="expModalDialog" class="modal fade">
 				<div class="modal-dialog">
@@ -506,7 +503,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- /.modal -->
+			<!-- /.modal -->﻿
 			<!-- Help dialog by Bootstrap3 Modals -->
 			<div id="helpModalDialog" class="modal fade">
 				<div class="modal-dialog">
@@ -539,10 +536,9 @@
 				</div>
 			</div>
 			<!-- /.modal -->
-
+ 
 		</div>
-		<!-- end of container -->
-
+		<!-- end of container -->﻿
 		<!-- Bootstrap core JavaScript ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="lib/js/vendor/jquery.min.js"></script>
