--- a/example_game.html
+++ b/example_game.html
@@ -6,9 +6,8 @@
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 		<meta name="description" content="This is very small block-type code editor ">
 		<meta name="author" content="Yutaka Kachi">
-		<link rel="icon" href="lib/img/favicon.ico">
-		<title>Example - SoraMame Block Editor</title>
-
+		<link rel="icon" href="lib/img/favicon.ico">﻿
+		<title>Example - game - SoraMame Block </title>﻿
 		<!-- Bootstrap core CSS -->
 		<link href="lib/css/bootstrap.min.css" rel="stylesheet">
 
@@ -23,8 +22,7 @@
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
-
+		<![endif]-->﻿
 	</head>
 	<body>
 		<!-- ---------- Start Static navbar ---------- -->
@@ -56,15 +54,14 @@
 				</div>
 			</div>
 		</nav>
-		<!-- End Static navbar -->
-		<div class="container-fluid">
+		<!-- End Static navbar -->﻿		<div class="container-fluid">
 			<div class="row">
 				<!-- tab body -->
 				<div class="tab-content">
 					<!-- tab item #1 -->
 					<div class="tab-pane fade in active" id="menu1">
 						<!-- ---------- start sidebar ---------- -->
-						<div class="col-xs-5 sidebar">
+						<div class="col-xs-4 sidebar">
 							<div class="sidebar-nav" role="complementary">
 							
 								<!-- ---------- start game area ---------- -->
@@ -177,10 +174,9 @@
 								<!-- panel-group -->
 							</div>
 						</div>
-						<!-- ---------- end of side-bar ---------- -->
-
+						<!-- ---------- end of side-bar ---------- -->﻿
 						<!-- ---------- Main Edit Area ---------- -->
-						<div class="col-xs-6 col-xs-offset-5 main">
+						<div class="col-xs-7 col-xs-offset-4 main">
 							<ol class="block connect-area serialize">
 								<li class="comment-block">
 									<div class="block-body">
@@ -209,7 +205,7 @@
 							</ol>
 						</div>
 						<!-- end of Main Edit Area-->
-						<!-- ---------- trash area ---------- -->
+﻿						<!-- trash area-->
 						<div class="col-xs-1">
 							<div class="sidebar-nav affix" role="complementary" data-toggle="tooltip" data-placement="top" title="double-click:clear">
 								<p></p>
@@ -220,21 +216,24 @@
 						<!-- end of trash area-->
 					</div>
 					<!-- end of tab item #1 -->
-
+﻿
 					<!-- tab item #2 -->
 					<div class="tab-pane fade" id="menu2">
 						<div class="col-xs-2"></div>
-						<div class="col-xs-10">
+						<div class="col-xs-8">
 							<pre>
 								<code class="js"></code>
 							</pre>
 						</div>
+						<div class="col-xs-2"></div>
 					</div>
 					<!-- end of tab item #2 -->
+					
 				</div>
 				<!-- end of tab body-->
 			</div>
 			<!-- end of row -->
+﻿
 			<!-- Express Editor by Bootstrap3 Modals -->
 			<div id="expModalDialog" class="modal fade">
 				<div class="modal-dialog">
@@ -253,10 +252,42 @@
 					</div>
 				</div>
 			</div>
+			<!-- /.modal -->﻿
+			<!-- Help dialog by Bootstrap3 Modals -->
+			<div id="helpModalDialog" class="modal fade">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h4 class="modal-title">Help - SoraMame.Block</h4>
+						</div>
+						<div class="modal-body">
+							<p>SoraMame.Block is block-type code editor for tiny script.</p>
+							<h5>How to use</h5>
+							<p>Block Tab</p>
+								<ul>
+									<li>Move Block: Drag and Drop block.</li>
+									<li>Edit Expression: Click expression </li>
+									<li>Clear Trash-Can: Double-Click trash</li>
+								</ul>
+							<p>Code Tab: View code.</p>
+							<p>Run Tab: Execute code.</p>
+							<h5>Reference</h5>
+							<ul>
+								<li><a href="https://github.com/ycatch/SoraMame.Block" target="_blank">Github</a></li>
+								<li><a href="http://www.catch.jp/wiki/index.php?SoraMame.Block" target="_blank">Japanese Documents - 日本語ドキュメント</a></li>
+							</ul>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
 			<!-- /.modal -->
+ 
 		</div>
-		<!-- end of container -->
-
+		<!-- end of container -->﻿
 		<!-- Game JavaScript ================================================== -->
 		<!-- Load the Phaser library -->
 		<script src="game/js/phaser.min.js"></script>
@@ -280,18 +311,17 @@
 				game.state.start('Boot');
 
 			})();
-		</script>
-
+		</script>﻿
 		<!-- Bootstrap core JavaScript ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="lib/js/vendor/jquery.min.js"></script>
 		<script src="lib/js/bootstrap.min.js"></script>
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 		<script src="lib/js/ie10-viewport-bug-workaround.js"></script>
-		<!-- SoraMame Block core JavaScript ============================================= -->
+		<!-- SoraMame Block core JavaScript ================================================== -->
 		<script type="text/javascript" src="lib/js/jquery-sortable.js"></script>
 		<script type="text/javascript" src="lib/js/soramame.block.js"></script>
 		<script type="text/javascript" src="lib/js/beautify.js"></script>
-		<script type="text/javascript" src="lib/js/highlight.pack.js"></script>
+ 		<script type="text/javascript" src="lib/js/highlight.pack.js"></script>	
 	</body>
 </html>
